Facebook footer link no longer is covered by instagram link

--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -6971,8 +6971,7 @@ footer .container .social-media .instagram {
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 0;
-    width: 50%;
+    right: 1;
     margin: auto;
   }
   footer .container .social-media .facebook,
