--- a/markup/less/footer.less
+++ b/markup/less/footer.less
@@ -94,8 +94,8 @@ footer {
 					position: absolute;
 				    top: 0;
 				    bottom: 0;
-				    right: 0;
-				    width: 50%;
+				    right: 1;
+				    //width: 50%;
 				    margin: auto;
 				}
 
